--- a/manual.tex
+++ b/manual.tex
@@ -3,10 +3,15 @@
 \usepackage{menukeys}
 \usepackage[sfdefault]{plex-sans} % Use IBM Plex Sans as the sans font and make it the default
 \usepackage{parskip}
+\usepackage{svg}
 
 \begin{document}
 
-Hátulján levő kapcsolóval indítható el. Rövid ideig az alábbi szöveg látható:
+Hátulján levő kapcsolóval indítható el.
+
+\includesvg[height=1cm]{images/switch}
+
+Rövid ideig az alábbi szöveg látható:
 
 \LCD{4}{20}
 |  EINGABETASTATUR   |
