--- a/manual.tex
+++ b/manual.tex
@@ -4,12 +4,23 @@
 \usepackage[sfdefault]{plex-sans} % Use IBM Plex Sans as the sans font and make it the default
 \usepackage{parskip}
 \usepackage{svg}
+\usepackage{titling}
+\usepackage[a4paper, portrait, margin=2.5cm]{geometry}
 
 \begin{document}
+\pagenumbering{gobble}
+
+\title{Brandmaier ET 40 számkijelző}
+\date{}
+
+\setlength{\droptitle}{-3cm}
+\maketitle
+
+\section*{Bekapcsolás}
 
 Hátulján levő kapcsolóval indítható el.
 
-\includesvg[height=1cm]{images/switch}
+\includesvg[height=1cm]{images/switch-on}
 
 Rövid ideig az alábbi szöveg látható:
 
@@ -19,9 +30,9 @@ Rövid ideig az alábbi szöveg látható:
 |    BRANDMAIER      |
 |   D-72160 HORB     |
 
-Rövid idő után eltűnik, ekkor várja a megjelenítendő számjegyeket.
+Rövid idő után eltűnik, ekkor várja a megjelenítendő számjegyeket. A távoli kijelzőt nem kell külön bekapcsolni.
 
-\textbf{Gombok jelentése}
+\section*{Gombok jelentése}
 
 \keys{0}-\keys{9} számjegyek
 
@@ -37,10 +48,19 @@ Rövid idő után eltűnik, ekkor várja a megjelenítendő számjegyeket.
 
 \keys{{+}}-\keys{{-}} írásjelek (+ és -) és belépés a beállítások menübe (együtt nyomva)
 
-\textbf{Egyszerű példák:}
+\section*{Egyszerű példák}
 
 \keys{1} \keys{2} \keys{3} \keys{ } \hfill \LCD{2}{3}|123||   |
 
 \keys{4} \keys{5} \keys{6} \keys{S} \keys{1} \keys{-} \keys{3} \keys{ } \hfill \LCD{2}{3}|456||1-3|
+
+
+A kijelzőre küldött számok egy perc után maguktól eltűnnek. Ha közben újabb számot írunk be, akkor a korábban megjelenített szám nem tűnik el, csak az újabb szám kiküldése fogja lecserélni.
+
+\section*{Kikapcsolás}
+
+Hátulján levő kapcsolóval. A távoli kijelzőt nem kell külön kikapcsolni.
+
+\includesvg[height=1cm]{images/switch-off}
 
 \end{document}
