bekapcsolás legyen jobban lényegre törő

--- a/manual.tex
+++ b/manual.tex
@@ -16,21 +16,23 @@
 \setlength{\droptitle}{-3cm}
 \maketitle
 
+\section*{Áttekintés}
+
+Az orgona tetején levő készülék rádión vezérli a templomi kijelzőt. Két sorban soronként három számjegy jeleníthető meg, valamint néhány írásjel. A billentyűzet fölötti kijelzőn előkészíthető a kivetítendő számsor.
+
 \section*{Bekapcsolás}
 
-Hátulján levő kapcsolóval indítható el.
+A billentyűzet hátulján levő kapcsolóval indítható el. A távoli kijelzőt nem kell külön bekapcsolni.
 
 \includesvg[height=1cm]{images/switch-on}
 
-Rövid ideig az alábbi szöveg látható:
+Rövid ideig a készülék típusa látható, majd az alábbi felirat jelzi hogy várja a megjelenítendő számjegyeket:
 
 \LCD{4}{20}
-|  EINGABETASTATUR   |
-|  ET 40-3  V3_22    |
-|    BRANDMAIER      |
-|   D-72160 HORB     |
-
-Rövid idő után eltűnik, ekkor várja a megjelenítendő számjegyeket. A távoli kijelzőt nem kell külön bekapcsolni.
+|*** ANZEIGETAFEL ***|
+|                    |
+|                    |
+|Tafel AUS           |
 
 \section*{Gombok jelentése}
 
