gombok leírásának egységesítése

--- a/manual.tex
+++ b/manual.tex
@@ -10,7 +10,7 @@
 \begin{document}
 \pagenumbering{gobble}
 
-\title{Brandmaier ET 40 számkijelző}
+\title{Brandmaier ET 40 templomi énekszám kijelző}
 \date{}
 
 \setlength{\droptitle}{-3cm}
@@ -38,7 +38,7 @@ Rövid ideig a készülék típusa látható, majd az alábbi felirat jelzi hogy
 
 \keys{0}-\keys{9} számjegyek
 
-\keys{ } \emph{Enter}: a beírt számjegyeket ez küldi ki kijelzőre.
+\keys{ } \emph{Enter}: a beírt számjegyeket ez küldi ki kijelzőre
 
 \keys{C} \emph{Clear = Lösch = törlés}: utoljára beírt számjegy és a teljes kijelző törlése
 
@@ -46,7 +46,7 @@ Rövid ideig a készülék típusa látható, majd az alábbi felirat jelzi hogy
 
 \keys{T} \emph{Text = Text = szöveg}: betűk írása
 
-\keys{P} \emph{Programmierung = programozás}: előre be lehet állítani számok sorozatát
+\keys{P} \emph{Programmierung = Programming = programozás}: előre be lehet állítani számok sorozatát
 
 \keys{{+}}-\keys{{-}} írásjelek (+ és -) és belépés a beállítások menübe (együtt nyomva)
 
