kijelzők méretének és színének megkülönböztetése

--- a/manual.tex
+++ b/manual.tex
@@ -28,11 +28,14 @@ A billentyűzet hátulján levő kapcsolóval indítható el. A távoli kijelző
 
 Rövid ideig a készülék típusa látható, majd az alábbi felirat jelzi hogy várja a megjelenítendő számjegyeket:
 
+\setlength\LCDunitlength{0.3mm}
 \LCD{4}{20}
 |*** ANZEIGETAFEL ***|
 |                    |
 |                    |
 |Tafel AUS           |
+\setlength\LCDunitlength{0.6mm}
+\LCDcolors{white}{black}
 
 \section*{Gombok jelentése}
 
