billentyűparancsok és kijelző összekötése

--- a/manual.tex
+++ b/manual.tex
@@ -55,10 +55,9 @@ Rövid ideig a készülék típusa látható, majd az alábbi felirat jelzi hogy
 
 \section*{Egyszerű példák}
 
-\keys{1} \keys{2} \keys{3} \keys{ } \hfill \LCD{2}{3}|123||   |
+\keys{1} \keys{2} \keys{3} \keys{ } \dotfill \LCD{2}{3}|123||   |
 
-\keys{4} \keys{5} \keys{6} \keys{S} \keys{1} \keys{-} \keys{3} \keys{ } \hfill \LCD{2}{3}|456||1-3|
-
+\keys{4} \keys{5} \keys{6} \keys{S} \keys{1} \keys{-} \keys{3} \keys{ } \dotfill \LCD{2}{3}|456||1-3|
 
 A kijelzőre küldött számok egy perc után maguktól eltűnnek. Ha közben újabb számot írunk be, akkor a korábban megjelenített szám nem tűnik el, csak az újabb szám kiküldése fogja lecserélni.
 
