nyelvek sorrendjének egységesítése

--- a/manual.tex
+++ b/manual.tex
@@ -26,7 +26,7 @@ A billentyűzet hátulján levő kapcsolóval indítható el. A távoli kijelző
 
 \includesvg[height=1cm]{images/switch-on}
 
-Rövid ideig a készülék típusa látható, majd az alábbi felirat jelzi hogy várja a megjelenítendő számjegyeket:
+A billentyűzet fölötti kijelzőn rövid ideig a készülék típusa látható, majd az alábbi felirat megjelenésekor lehet beírni a megjelenítendő számjegyeket:
 
 \setlength\LCDunitlength{0.3mm}
 \LCD{4}{20}
@@ -49,7 +49,7 @@ Rövid ideig a készülék típusa látható, majd az alábbi felirat jelzi hogy
 
 \keys{T} \emph{Text = Text = szöveg}: betűk írása
 
-\keys{P} \emph{Programmierung = Programming = programozás}: előre be lehet állítani számok sorozatát
+\keys{P} \emph{Programming = Programmierung = programozás}: előre be lehet állítani számok sorozatát
 
 \keys{{+}}-\keys{{-}} írásjelek (+ és -) és belépés a beállítások menübe (együtt nyomva)
 
