automatikus törlés áthelyezése az áttekintésbe

--- a/manual.tex
+++ b/manual.tex
@@ -18,7 +18,7 @@
 
 \section*{Áttekintés}
 
-Az orgona tetején levő készülék rádión vezérli a templomi kijelzőt. Két sorban soronként három számjegy jeleníthető meg, valamint néhány írásjel. A billentyűzet fölötti kijelzőn előkészíthető a kivetítendő számsor.
+Az orgona tetején levő készülékkel vezérelhető a templomi kijelző. Két sorban soronként három számjegy jeleníthető meg, valamint néhány írásjel. A beütött számjegyek először a billentyűzet fölötti kis kijelzőn jelennek meg, külön gombnyomás küldi ki a nagy kijelzőre. A kijelzőre küldött számok egy perc után maguktól eltűnnek.
 
 \section*{Bekapcsolás}
 
@@ -58,8 +58,6 @@ A billentyűzet fölötti kijelzőn rövid ideig a készülék típusa látható
 \keys{1} \keys{2} \keys{3} \keys{ } \dotfill \LCD{2}{3}|123||   |
 
 \keys{4} \keys{5} \keys{6} \keys{S} \keys{1} \keys{-} \keys{3} \keys{ } \dotfill \LCD{2}{3}|456||1-3|
-
-A kijelzőre küldött számok egy perc után maguktól eltűnnek. Ha közben újabb számot írunk be, akkor a korábban megjelenített szám nem tűnik el, csak az újabb szám kiküldése fogja lecserélni.
 
 \section*{Kikapcsolás}
 
