plusz és mínusz gombok jelentésének javítása

--- a/manual.tex
+++ b/manual.tex
@@ -51,7 +51,7 @@ A billentyűzet fölötti kijelzőn rövid ideig a készülék típusa látható
 
 \keys{P} \emph{Programming = Programmierung = programozás}: előre be lehet állítani számok sorozatát
 
-\keys{{+}}-\keys{{-}} írásjelek (+ és -) és belépés a beállítások menübe (együtt nyomva)
+\keys{{+}}-\keys{{-}} elválasztójelek; program lapozása; a kettőt együtt nyomva belépés a beállítások menübe
 
 \section*{Egyszerű példák}
 
